--- a/src/index.html
+++ b/src/index.html
@@ -13,37 +13,37 @@
   <nav id="nav">
     <a class="nav-block" id="nav-home" href="?page=home">
       <img
-      src="../res/img/icons/home.svg"
+      src="res/img/icons/home.svg"
       />
       <span class="nav-text">Главная</span>
     </a>
     <a class="nav-block" id="nav-user" href="?page=user">
       <img
-      src="../res/img/icons/user.svg"
+      src="res/img/icons/user.svg"
       />
       <span class="nav-text">ЛK</span>
     </a>
     <a class="nav-block" id="nav-post" href="?page=post">
       <img
-      src="../res/img/icons/post.svg"
+      src="res/img/icons/post.svg"
       />
       <span class="nav-text">Лекции</span>
     </a>
     <a class="nav-lesson" id="nav-lesson1" href="?page=post&lesson=lesson1">
       <span><img
-        src="../res/img/elements/connector.svg"
+        src="res/img/elements/connector.svg"
         /></span>
         <span class="nav-lesson-text">OSI & TCP/IP Stack</span>
     </a>
     <a class="nav-lesson mt-7" id="nav-lesson2" href="?page=post&lesson=lesson2">
         <span><img
-          src="../res/img/elements/connector.svg"
+          src="res/img/elements/connector.svg"
           /></span>
           <span class="nav-lesson-text">SOAP Principles</span>
     </a>
     <a class="nav-lesson mt-7" id="nav-lesson3" href="?page=post&lesson=lesson3">
         <span><img
-          src="../res/img/elements/connector_end.svg"
+          src="res/img/elements/connector_end.svg"
         /></span>
         <span class="nav-lesson-text">REST Principles</span>
     </a>
@@ -61,7 +61,7 @@
         </div>
         <div class="next-button" id="next-button" style="width: 80%; display: flex; justify-content: end; cursor: pointer;">
           <img
-            src="../res/img/elements/arrow.svg"
+            src="res/img/elements/arrow.svg"
           />
         </div>
       </div>
@@ -125,6 +125,6 @@
       </div>
     </div>
   </div>
-  <script src="./script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
