--- a/src/index.html
+++ b/src/index.html
@@ -29,24 +29,26 @@
       />
       <span class="nav-text">Лекции</span>
     </a>
-    <a class="nav-lesson" id="nav-lesson1" href="?page=post&lesson=lesson1">
-      <span><img
-        src="res/img/elements/connector.svg"
-        /></span>
-        <span class="nav-lesson-text">OSI & TCP/IP Stack</span>
-    </a>
-    <a class="nav-lesson mt-7" id="nav-lesson2" href="?page=post&lesson=lesson2">
+    <div class="nav-lessons">
+      <a class="nav-lesson" id="nav-lesson1" href="?page=post&lesson=lesson1">
         <span><img
           src="res/img/elements/connector.svg"
           /></span>
-          <span class="nav-lesson-text">SOAP Principles</span>
-    </a>
-    <a class="nav-lesson mt-7" id="nav-lesson3" href="?page=post&lesson=lesson3">
-        <span><img
-          src="res/img/elements/connector_end.svg"
-        /></span>
-        <span class="nav-lesson-text">REST Principles</span>
-    </a>
+          <span class="nav-lesson-text">OSI & TCP/IP Stack</span>
+      </a>
+      <a class="nav-lesson mt-7" id="nav-lesson2" href="?page=post&lesson=lesson2">
+          <span><img
+            src="res/img/elements/connector.svg"
+            /></span>
+            <span class="nav-lesson-text">SOAP Principles</span>
+      </a>
+      <a class="nav-lesson mt-7" id="nav-lesson3" href="?page=post&lesson=lesson3">
+          <span><img
+            src="res/img/elements/connector_end.svg"
+          /></span>
+          <span class="nav-lesson-text">REST Principles</span>
+      </a>
+    </div>
     <div class="highlight hidden" id="highlight"></div>
   </nav>
   <div class="container">
